# NumericArray

./: CMakeLists.txt  README.md
NumericArray/: CMakeLists.txt  NumericArray.pro
NumericArray/include/N4/: BinaryOperators.h  Color3f.h  Dispatch.h  Functions.h  Manipulator.h  Math.h  Matrix4f.h  N4.h  Optics.h  SIMD.h  ScalarOperand.h  TypeTraits.h  UnaryOperators.h  Vector4f.h
NumericArray/include/cs/: Array.h  ArrayPolicy.h  ArrayTraits.h  BinaryOperators.h  ExprBase.h  Functions.h  Geometry.h  IndexPolicy.h  ListAssign.h  Manipulator.h  Math.h  Meta.h  NumericArray.h  NumericTraits.h  SIMD.h  TypeTraits.h  Types.h  UnaryOperators.h
NumericArray/include/cs/impl/: ArrayImpl.h  ArrayPolicyImpl.h  ArrayTraitsImpl.h  BinaryOperatorsImpl.h  FunctionsImpl.h  GeometryImpl.h  IndexPolicyImpl.h  Indexing.h  IndexingImpl.h  UnaryOperatorsImpl.h
NumericArray/src/: main.cpp
NumericArray/tests/: CMakeLists.txt  research_vectorization.cpp
NumericArray/tests/include/: Testing.h
NumericArray/tests/src/: main.cpp  research_traits.cpp  test_RunAll.cpp  test_array.cpp  test_meta.cpp  test_simd.cpp
NumericArray/testutils/include/: TestArrayEqual.h  TestEquals.h  TestFormatter.h
NumericArray/unittests/: CMakeLists.txt
NumericArray/unittests/include/: Optics.h
NumericArray/unittests/src/: unittest_array.cpp  unittest_assign.cpp  unittest_binary.cpp  unittest_math.cpp  unittest_math_impl.cpp  unittest_n4.cpp  unittest_n4_impl.cpp  unittest_unary.cpp
